delete DS_Store and add prod script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postinstall": "link-module-alias",
     "preinstall": "command -v link-module-alias && link-module-alias clean || true",
     "build": "tsc && tsc-alias",
-    "start": "tsc && tsc-alias && nodemon dist/index.js"
+    "start": "tsc && tsc-alias && nodemon dist/index.js",
+    "prod": "yarn install && tsc && tsc-alias && nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
