--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "moment": "^2.29.4",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
