--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mysql://binary:5ayagantenG%40@103.250.10.47:3308/kasir_db
+DATABASE_URL="mysql://root:12345678@localhost:3306/asp_bimbel"
