--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@types/cors": "^2.8.14",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
