--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "module-alias": "^2.2.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/module-alias": "^2.0.2",
+    "@types/multer": "^1.4.11",
     "link-module-alias": "^1.2.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.1",
