--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "json-as-xlsx": "^2.5.6",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
+    "read-excel-file": "^5.7.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
