--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.9",
     "read-excel-file": "^5.7.1",
     "ts-node": "^10.9.1"
   },
@@ -41,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/module-alias": "^2.0.2",
     "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
     "link-module-alias": "^1.2.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.1",
