--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "read-excel-file": "^5.7.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -43,6 +44,7 @@
     "@types/module-alias": "^2.0.2",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^10.0.0",
     "link-module-alias": "^1.2.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.1",
