--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="mysql://root:secret@localhost:3306/asp_bimbel"
+# DATABASE_URL="mysql://root:secret@localhost:3306/asp_bimbel"
+DATABASE_URL="mysql://root:Ozm1wGZjN3anIK9d@94.237.73.4:51623/asp_bimbel"
